--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -226,6 +226,7 @@
     <string name="biometric_prompt_private_key_title">Authenticate to view private key</string>
     <string name="biometric_auth_error">Authentication failure</string>
     <string name="biometric_auth_error_reason">Authentication failure: %s</string>
+    <!--Bubble constants-->
     <string name="bubble_name">Bubble Name</string>
     <string name="user_name">User Name:</string>
     <string name="password">Password:</string>
