--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -241,4 +241,5 @@
     <string name="connect">Connect</string>
     <string name="disable_apps">Disable Apps</string>
     <string name="turnInternet">Please turn on internet connection</string>
+    <string name="progress_bar_text">Loading</string>
 </resources>
