--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -243,4 +243,6 @@
     <string name="turnInternet">Please turn on internet connection</string>
     <string name="progress_bar_text">Loading</string>
     <string name="not_connected_bubble">Not Connected</string>
+    <string name="connected_bubble">Connected</string>
+    <string name="failed_bubble">Failed</string>
 </resources>
