--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -245,4 +245,5 @@
     <string name="not_connected_bubble">Not Connected</string>
     <string name="connected_bubble">Connected</string>
     <string name="failed_bubble">Failed</string>
+    <string name="disconnect">Disconnect</string>
 </resources>
