--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -233,16 +233,16 @@
     <string name="sign_in">Sign In</string>
     <string name="don_t_have_a_bubble">Don\'t have a Bubble?</string>
     <string name="start_new_bubble">Start New Bubble</string>
-    <string name="my_bubble">My Bubble</string>
-    <string name="bubble_status">Bubble Status:</string>
+    <string name="my_bubble">Bubble Connection</string>
+    <string name="bubble_status">MY BUBBLE</string>
     <string name="running">Running</string>
     <string name="this_device_status">This Device Status:</string>
     <string name="not_connected">Not Connected</string>
-    <string name="connect">Connect</string>
+    <string name="connect">CONNECT</string>
     <string name="disable_apps">Disable Apps</string>
     <string name="turnInternet">Please turn on internet connection</string>
     <string name="progress_bar_text">Loading</string>
-    <string name="not_connected_bubble">Not Connected</string>
+    <string name="not_connected_bubble">Not Connected ...</string>
     <string name="connected_bubble">Connected</string>
     <string name="failed_bubble">Failed</string>
     <string name="disconnect">Disconnect</string>
@@ -255,4 +255,5 @@
     <string name="email">Email:</string>
     <string name="you_can_find_your_bubble_name_in_your_email">You can find your Bubble name in your email</string>
     <string name="enter_your_bubble_name">Enter your Bubble Name</string>
+    <string name="your_private_bubble">Your private Bubble provides \n protection on this device.</string>
 </resources>
