--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -257,4 +257,6 @@
     <string name="enter_your_bubble_name">Enter your Bubble Name</string>
     <string name="your_private_bubble">Your private Bubble provides \n protection on this device.</string>
     <string name="network_not_found">Sorry, friends. Network not currently available.</string>
+    <string name="error_title">Sadface. We have \n encountered \n an error.</string>
+    <string name="contact_support">CONTACT SUPPORT</string>
 </resources>
