--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -255,8 +255,9 @@
     <string name="email">Email:</string>
     <string name="you_can_find_your_bubble_name_in_your_email">You can find your Bubble name in your email</string>
     <string name="enter_your_bubble_name">Enter your Bubble Name</string>
-    <string name="your_private_bubble">Your private Bubble provides \n protection on this device.</string>
+    <string name="your_private_bubble">You are safe in your Bubble!</string>
     <string name="network_not_found">Sorry, friends. Network not currently available.</string>
     <string name="error_title">Sadface. We have \n encountered \n an error.</string>
     <string name="contact_support">CONTACT SUPPORT</string>
+    <string name="log_out">Log out</string>
 </resources>
